--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,12 @@ email_validator==2.2.0
 fastapi==0.115.12
 h11==0.14.0
 idna==3.10
+iniconfig==2.1.0
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.11.3
 pydantic_core==2.33.1
+pytest==8.3.5
 python-dotenv==1.1.0
 setuptools==75.8.0
 sniffio==1.3.1
