--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,48 @@
 annotated-types==0.7.0
 anyio==4.9.0
+azure-core==1.33.0
+azure-identity==1.21.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.2
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.12
+gunicorn==23.0.0
 h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+msal==1.32.0
+msal-extensions==1.3.1
 packaging==24.2
+passlib==1.7.4
 pluggy==1.5.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+PyJWT==2.10.1
 pytest==8.3.5
 python-dotenv==1.1.0
+python-jose==3.5.0
+python-multipart==0.0.20
+requests==2.32.3
+rsa==4.9.1
 setuptools==75.8.0
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.42
+sqlmodel==0.0.24
 starlette==0.46.1
 toml==0.10.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+urllib3==2.4.0
 uvicorn==0.34.0
 wheel==0.45.1
